@@ -85,6 +85,10 @@ documents those changes that are of interest to users and administrators.
  -- Add salloc/sbatch/srun option --use-min-nodes to prefer smaller node counts
     when a range of node counts is specified (e.g. "-N 2-4").
  -- Validate salloc/sbatch --wait-all-nodes argument.
+ -- Add "sbatch_wait_nodes" to SchedulerParameters to control default sbatch
+    behaviour with respect to waiting for all allocated nodes to be ready for
+    use. Job can override the configuration option using the --wait-all-nodes=#
+    option.
 
 * Changes in Slurm 16.05.4
 ==========================
